<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/launchPlateCalculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:background="@drawable/background_border"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:text="@string/text_launch_PlateCalculator"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/launchRMcalculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:background="@drawable/background_border"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:text="@string/text_launch_RM_Calculator"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/launchDeloadCalculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:background="@drawable/background_border"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:text="@string/text_launch_Deload_Calculator"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/launchSetTracker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:background="@drawable/background_border"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:layout_weight="1"
            android:text="@string/text_launch_Set_Tracker"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif" />
    </LinearLayout>
</LinearLayout>