<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/editTextEnterFullWeight"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="28dp"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintRight_toLeftOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:text="225" />

    <EditText
        android:id="@+id/editTextEnterBarWeight"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="45"
        android:textAlignment="center"
        android:textSize="16sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/editTextEnterFullWeight"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextEnterFullWeight"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/editTextEnterFullWeight" />

    <Button
        android:id="@+id/btnCalculateWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="49dp"
        android:text="@string/text_button_calc_weight"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@+id/lblBarWeight"
        app:layout_constraintTop_toBottomOf="@+id/editTextEnterBarWeight"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="38dp"
        android:text="@string/editTextEnterWeight"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/lblBarWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/text_bar_weight"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextEnterBarWeight"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioFullWeight"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_full"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="314dp"
            tools:layout_editor_absoluteY="81dp" />

        <RadioButton
            android:id="@+id/radioOneSide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_one_side"
            android:textSize="12sp" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>