<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.trey.fitnesstools.ActivitySetTracker"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_current_set"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="63dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtViewSetCount"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/txtViewSetCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="1"
        android:layout_marginEnd="23dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/btnIncrement"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnIncrement"
        android:layout_width="70dp"
        android:layout_height="60dp"
        app:srcCompat="@drawable/plus"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/zero_button"
        android:layout_marginEnd="6dp"
        app:layout_constraintRight_toRightOf="@+id/zero_button"
        android:layout_marginBottom="28dp" />

    <ImageButton
        android:id="@+id/btnDecrement"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="70dp"
        app:srcCompat="@drawable/minus"
        android:layout_marginEnd="70dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/btnIncrement"
        app:layout_constraintRight_toRightOf="@+id/textView13"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnIncrement" />

    <Chronometer
        android:id="@+id/stopwatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:countDown="false"
        android:textSize="30sp"
        android:layout_marginStart="10dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="36dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btnToggleStartStop" />

    <Button
        android:id="@+id/btnToggleStartStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:text="@string/txt_start"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnResetStopwatch"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnResetStopwatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_reset"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/txtViewSetCount"
        android:layout_marginStart="19dp"
        android:layout_marginTop="81dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="80dp"
        app:layout_constraintTop_toTopOf="@+id/stopwatch"
        app:layout_constraintLeft_toRightOf="@+id/stopwatch" />

    <Button
        android:id="@+id/zero_button"
        android:layout_width="231dp"
        android:layout_height="48dp"
        android:text="@string/txtZero"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="62dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
