<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.trey.fitnesstools.ActivityRepMaxCalculator"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/editTextEnterWeightLifted"
        android:layout_width="97dp"
        android:layout_height="35dp"
        android:layout_marginEnd="56dp"
        android:focusedByDefault="false"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textSize="17sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/editTextEnterRepsPerformed"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="23dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEnterRepsPerformed"
        android:layout_width="94dp"
        android:layout_height="36dp"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textSize="17sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/inputRepMax"
        app:layout_constraintRight_toRightOf="@+id/inputRepMax"
        android:layout_marginTop="44dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="45dp"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        app:layout_constraintLeft_toRightOf="@+id/inputRepMax" />

    <SeekBar
        android:id="@+id/seekBar_rep_max"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:max="20"
        android:progress="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/outputRepMax"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toBottomOf="@+id/inputRepMax"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="36dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/inputRepMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textStyle="bold"
        tools:text="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="98dp"
        app:layout_constraintRight_toRightOf="@+id/seekBar_rep_max"
        android:layout_marginTop="145dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/outputRepMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="x is your y rep max"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/btnShowRMPlates"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="24dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/text_weight_lifted"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="37dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/text_reps_performed"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        android:layout_marginTop="56dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="52dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/text_desired_rep_max"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/seekBar_rep_max"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="26dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnShowRMPlates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_showRMPlates"
        android:textAlignment="viewStart"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="171dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnShowRMDeloaded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:text="@string/txt_show_RM_percent"
        android:textAlignment="center"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/btnShowRMPlates"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/btnShowRMPlates" />


</android.support.constraint.ConstraintLayout>
